# rtm

./: .gitignore  Cargo.toml  README.md  all.do  research.md  rustfmt.toml
.github/: coverage.yml
benches/: status.do
examples/: status.do
rtm-attributes/: .gitrepo
rtm-cli/: .gitrepo
rtm-csv/: .gitrepo
rtm-devtools/: .gitrepo
rtm-examples/: .gitrepo
rtm-examples/crates/cqrs04/: README.md
rtm-examples/crates/cqrs04/mtr/: Cargo.toml
rtm-examples/crates/cqrs04/mtr/mtr-account/: Cargo.toml
rtm-examples/crates/cqrs04/mtr/mtr-account/src/: lib.rs
rtm-examples/crates/cqrs04/mtr/mtr-entities/: Cargo.toml
rtm-examples/crates/cqrs04/mtr/src/: domain.rs
rtm-examples/crates/cqrs05/src/post/: commands.rs
rtm-http/: .gitrepo
rtm-json/: .gitrepo
rtm-macros/: .gitrepo
rtm-nats/: .gitrepo
rtm-schema/: .gitrepo
rtm-sql/: .gitrepo
rtm-tests/: .gitrepo
rtm-yaml/: .gitrepo  status.do
src/: lib.rs  status.do
src/prelude/: mod.rs
src/types/: mod.rs
src/types/newtypes/: mod.rs  relations.rs
template/: .gitrepo
template/scripts/: rtm-generate
template/test/: generate_base.bats  generate_base_files.bats  help.bats  setup_suite.bash
tests/: status.do
